@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-22-18
+DATE: 11/30/2022
+STAFF: lec
+fl2/gxd secondary triage
+weekly/WF_GXD_secondary.py
+
 TAG: qcreports_db-6-0-22-17
 DATE: 11/25/2022
 STAFF: lec
